update the case
