# Route/caseRoute.js
@@ -1,5 +1,5 @@
 import express from 'express';
-import {addCase, getAllCase,getCaseDetails} from "../controller/caseController.js"
+import {addCase, getAllCase,getCaseDetails, updateCase} from "../controller/caseController.js"
 import {validateNewCase} from "../Utils/validation.js"
 import {authenticateToken} from "../Middleware/authethicateToken.js"
 
@@ -7,5 +7,6 @@ const route = express.Router()
  route.post("/addCase",authenticateToken,validateNewCase,addCase)
  route.get("/getAllCase",getAllCase)
  route.get("/getCaseById/:id",getCaseDetails)
+ route.patch("/updateCase/:id",authenticateToken,updateCase)
 
  export default route;
